[gd_scene load_steps=3 format=3 uid="uid://ability_score_tab"]

[ext_resource type="Script" path="res://scripts/character_creation/tabs/AbilityScoreTab.gd" id="1_abilitytab"]
[ext_resource type="Theme" uid="uid://dpiqolc47bhf4" path="res://themes/bg3_theme.tres" id="2_theme"]

[node name="AbilityScoreTab" type="VBoxContainer"]
theme = ExtResource("2_theme")
script = ExtResource("1_abilitytab")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "Allocate Ability Scores"
horizontal_alignment = 1

[node name="InstructionsLabel" type="Label" parent="."]
layout_mode = 2
autowrap_mode = 3
text = "Adjust your ability scores. Base scores start at 8."

[node name="AbilityScoresContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PointsRemainingLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "Points Remaining: 27"
horizontal_alignment = 1
